<resources>
    <string name="app_name">GAMV</string>


    <!--    Bottom menu     -->
    <string name="home_button_title">Home</string>
    <string name="add_host_button_title">Add</string>
    <string name="settings_button_title">Settings</string>

    <!--    Host item       -->
    <string name="server_icon">Server icon</string>
    <string name="edit_host">Edit host</string>
    <string name="delete_host">Delete host</string>

    <!--    Home screen     -->
    <string name="no_hosts_msg">There are no saved hosts.</string>
    <string name="tap_to_add">Tap on Add button to create one.</string>

    <!--    Add / update screen     -->
    <string name="input_host_name">Host name</string>
    <string name="host_name_ex">Ex: School server</string>
    <string name="input_ip">Host IP</string>
    <string name="ip_ex">192.168.1.X</string>
    <string name="input_port">Port</string>
    <string name="port_22">22</string>
    <string name="input_user">User</string>
    <string name="user_ex">Ex: root</string>
    <string name="input_password">Password (optional)</string>
    <string name="save_btn">Save</string>

    <!--    Update screen     -->
    <string name="update_host_title">Update host</string>

    <!--    Virtual machine item     -->
    <string name="power_vm">Power button</string>
    <string name="restart_vm">Restart button</string>
    <string name="sleep_vm">Sleep button</string>
    <string name="pause_vm">Pause button</string>
    <string name="snapshots_vm">Snapshots button</string>
    <string name="snapshot_vm">Create snapshot button</string>
    <string name="vm_icon">Desktop icon</string>

    <!--    Password dialog     -->
    <string name="dialog_password_title">SSH Password</string>
    <string name="dialog_password_host_msg">Host: %s</string>
    <string name="cancel_btn">Cancel</string>
    <string name="connect_btn">Connect</string>
    <string name="error_password_empty">Password cannot be empty.</string>
    <string name="input_password_2">Write the password</string>

    <!--    List VMs screen     -->
    <string name="no_vms_msg">There are no virtual machines.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_snapshot_name_title">Snapshot name</string>
    <string name="input_snapshot_name">Write the name</string>
    <string name="create_snapshot_btn">Create</string>

    <!--    List Snapshots screen     -->
    <string name="revert_btn_description">Revert snapshot</string>
    <string name="delete_btn_description">Delete snapshot</string>
    <string name="no_snapshots_msg">There are no snapshots.</string>
    <string name="snapshots_title">Snapshots</string>
    <string name="state_prefix">State: %1$s</string>

    <!-- Settings screen -->
    <string name="settings_language_title">Language</string>
    <string name="settings_language_spanish">Spanish</string>
    <string name="settings_language_english">English</string>

</resources>